igw.tf
resource "aws_internet_gateway" "igw_vpc" {

vpc_id = aws_vpc.myvpc.id



tags = {

Name = "Project VPC IG"

}

}
