privtsubnet.tf
resource "aws_subnet" "private_subnets" {
  count = length(var.private_subnet_cidrs)
  vpc_id = aws_vpc.myvpc.id
  cidr_block = element(var.private_subnet_cidrs, count.index)
  availability_zone = element(var.azs, count.index)
  
tags = {
  Name = "Private Subnet ${count.index + 1}"
  }
  
}
