publicsubnet.tf
resource "aws_subnet" "public_subnets"{
  count = length(var.public_subnet_cidrs)
  vpc_id = aws_vpc.myvpc.id
  cidr_block = element(var.public_subnet_cidrs, count.index)
  availability_zone = element(var.azs, count.index)

tags = {
  Name = "Public Subnet ${count.index + 1}"

  }
}
